--- a/package.json
+++ b/package.json
@@ -1,18 +1,29 @@
-{ "name": "ruscript"
-, "description": "Ruby interpreter in JavaScript"
-, "keywords": [ "ruby", "parser", "interpreter", "javascript" ]
-, "version": "0.0.1alpha"
-, "author": "Angel 'Java' Lopez <webmaster@ajlopez.com> (http://www.ajlopez.com)"
-, "repository": { "type": "git", "url": "git://github.com/ajlopez/RuScript.git" }
-, "main": "./lib/ruscript.js"
-, "engines": { "node": ">= 0.6.0 && < 0.11.0" }
-, "scripts": {
+{
+  "name": "ruscript",
+  "description": "Ruby interpreter in JavaScript",
+  "keywords": [
+    "ruby",
+    "parser",
+    "interpreter",
+    "javascript"
+  ],
+  "version": "0.0.1alpha",
+  "author": "Angel 'Java' Lopez <webmaster@ajlopez.com> (http://www.ajlopez.com)",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/ajlopez/RuScript.git"
+  },
+  "main": "./lib/ruscript.js",
+  "engines": {
+    "node": ">= 0.6.0 && < 0.11.0"
+  },
+  "scripts": {
     "test": "simpleunit test"
-  }
-, "dependencies": {
-    "simplegrammar": "0.0.3"
-  }
-, "devDependencies": {
+  },
+  "dependencies": {
+    "simplegrammar": "0.0.4"
+  },
+  "devDependencies": {
     "simpleunit": "0.0.2"
   }
 }
